--- a/package.json
+++ b/package.json
@@ -17,33 +17,34 @@
     "node": ">=6"
   },
   "dependencies": {
-    "@babel/core": "^7.0.0-beta.42",
-    "@babel/preset-env": "^7.0.0-beta.42",
-    "@babel/preset-react": "^7.0.0-beta.42",
-    "autoprefixer": "^8.2.0",
-    "babel-loader": "^8.0.0-beta.2",
-    "connect-history-api-fallback": "^1.5.0",
-    "copy-webpack-plugin": "^4.5.1",
-    "css-loader": "^0.28.11",
-    "express": "^4.16.3",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
-    "html-webpack-plugin": "^3.1.0",
-    "mongoose": "^5.0.11",
-    "node-sass": "^4.7.2",
-    "nodemon": "^1.17.2",
-    "postcss-loader": "^2.1.3",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-hot-loader": "^4.0.0",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "sass-loader": "^6.0.7",
-    "style-loader": "^0.20.3",
-    "webpack": "^4.2.0",
-    "webpack-cli": "^2.0.13",
-    "webpack-dev-middleware": "^3.0.1",
-    "webpack-hot-middleware": "^2.21.2",
-    "webpack-merge": "^4.1.2",
-    "whatwg-fetch": "^2.0.3"
+    "@babel/core": "*",
+    "@babel/preset-env": "*",
+    "@babel/preset-react": "*",
+    "autoprefixer": "*",
+    "babel-loader": "*",
+    "bootstrap": "*",
+    "connect-history-api-fallback": "*",
+    "copy-webpack-plugin": "*",
+    "css-loader": "*",
+    "express": "*",
+    "extract-text-webpack-plugin": "*",
+    "html-webpack-plugin": "*",
+    "mongoose": "*",
+    "node-sass": "*",
+    "nodemon": "*",
+    "postcss-loader": "*",
+    "react": "*",
+    "react-dom": "*",
+    "react-hot-loader": "*",
+    "react-router": "*",
+    "react-router-dom": "*",
+    "sass-loader": "*",
+    "style-loader": "*",
+    "webpack": "*",
+    "webpack-cli": "*",
+    "webpack-dev-middleware": "*",
+    "webpack-hot-middleware": "*",
+    "webpack-merge": "*",
+    "whatwg-fetch": "*"
   }
 }
